--- a/assets/css/utilities.scss
+++ b/assets/css/utilities.scss
@@ -23,6 +23,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	width: fit-content;
+	max-width: 100%;
 }
 
 .v-center {
@@ -78,4 +79,5 @@
 .highlight {
 	background: yellow;
 	width: fit-content;
+	max-width: 100%;
 }
